[package]
name = "for-mqtt-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
bytes = "1.3.0"
tokio = {version="1.23.0", features = ["time", "rt-multi-thread", "rt", "sync", "macros", "net", "io-util"]}
url = "2.3.1"
log = "0.4.17"
custom-utils = "0.10.12"
ringbuf = "0.3.1"
chrono = "0.4.23"