[package]
name = "for-mqtt-client"
version = "0.2.0"
edition = "2021"
description = "mqtt v3/v5 client, only support rustls"
repository = "https://github.com/jm-observer/for-mqtt-client"

license-file = "LICENSE"
readme = "README.md"

include = [
    "LICENSE", "Cargo.toml", "README.md", "src/**/*.rs"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
bytes = "1.3.0"
tokio = {version="1.23.0", features = ["time", "rt-multi-thread", "rt", "sync", "macros", "net", "io-util", "fs"]}
url = "2.3.1"
log = "0.4.17"
#custom-utils = "0.10.12"
ringbuf = "0.3.1"
chrono = "0.4.23"

rustls = {version = "0.20.8", features = ["dangerous_configuration"]}
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.2"
#tokio-tls = "0.3.1"
tokio-rustls = "0.23.4"
tokio-native-tls = "0.3.1"

webpki = "0.22.0"
[dev-dependencies]
custom-utils = "0.10.12"