[package]
name = "for-mqtt-client"
version = "0.3.5"
edition = "2021"
description = "mqtt v3/v5 client, only support rustls"
repository = "https://github.com/jm-observer/for-mqtt-client"

license-file = "LICENSE"
readme = "README.md"

include = [
    "LICENSE", "Cargo.toml", "README.md", "src/**/*.rs", "examples"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
bytes = "1.3.0"
tokio = {version="1.23.0", features = ["time", "rt-multi-thread", "rt", "sync", "macros", "net", "io-util", "fs"]}
url = "2.3.1"
log = "0.4.17"
#custom-utils = "0.10.12"
ringbuf = "0.3.1"
chrono = "0.4.23"

rustls = {version = "0.20.8", features = ["dangerous_configuration"], optional = true}
rustls-native-certs = {version = "0.6.2" , optional = true}
rustls-pemfile = {version = "1.0.2", optional = true}
#tokio-tls = "0.3.1"
tokio-rustls = {version = "0.23.4", optional = true}
tokio-native-tls = {version = "0.3.1", optional = true}
webpki = {version = "0.22.0", optional = true}

for_event_bus = "0.1.5"
[dev-dependencies]
custom-utils = "0.10.12"

[features]
 default = ["tls"]
tls = ["rustls", "rustls-native-certs", "rustls-pemfile", "tokio-rustls", "tokio-native-tls", "webpki"]

#[patch.crates-io]
#for_event_bus = {path = "../for_event_bus/for-event-bus"}


[[example]]
name = "v3_rustls"
required-features = ["tls"] 

